--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "concurrently \"npm run start-backend\" \"npm run dev\"",
-    "start-backend": "node backend/server.js",
-    "fmt": "pnpm rome check . --apply-suggested && pnpm rome format . --write"
+    "start": "next start"
   },
   "dependencies": {
     "@next/font": "^13.4.3",
@@ -17,7 +15,6 @@
     "@types/react-dom": "18.2.4",
     "@upstash/redis": "^1.20.6",
     "contentlayer": "^0.3.0",
-    "express": "^4.18.2",
     "framer-motion": "^10.12.12",
     "lucide-react": "^0.220.0",
     "markdown-wasm": "^1.2.0",
@@ -38,7 +35,6 @@
     "@tailwindcss/line-clamp": "^0.4.2",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
-    "concurrently": "^8.2.0",
     "pnpm": "^8.6.10",
     "postcss": "^8.4.21",
     "postcss-nesting": "^11.2.2",
