--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,22 +2,26 @@
 
 backend:
   name: git-gateway
-  branch: main # Branch to update (optional; defaults to master)
+  branch: main
 
-media_folder: "public/img" # Folder where user uploaded files should go
-public_folder: "/img" # Folder path where uploaded files will be accessed
+media_folder: static/img
+public_folder: /img
 
-collections: # A list of collections the CMS should be aware of
-  - name: "projects" # Used in routes, e.g., /admin/collections/blog
-    label: "Projects" # Used in the UI
-    folder: "content/projects" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    fields: # The fields for each document, usually in front matter
+collections:
+  - name: "projects"
+    label: "Projects"
+    folder: "content/projects"
+    create: true
+    slug: "{{slug}}"
+    fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Date", name: "date", widget: "date" }
       - { label: "URL", name: "url", widget: "string" }
-      - { label: "Published", name: "published", widget: "boolean" }
       - { label: "Repository", name: "repository", widget: "string" }
-      - { label: "Body", name: "body", widget: "markdown" }
+      - {
+          label: "Published",
+          name: "published",
+          widget: "boolean",
+          default: true,
+        }
