--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "@next/font": "^13.4.3",
     "@next/mdx": "^13.4.3",
+    "@supabase/supabase-js": "^2.29.0",
+    "@types/next": "^9.0.0",
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
-    "@upstash/redis": "^1.20.6",
     "contentlayer": "^0.3.0",
     "framer-motion": "^10.12.12",
-    "lucide-react": "^0.220.0",
+    "lucide-react": "^0.263.1",
     "markdown-wasm": "^1.2.0",
     "netlify-cms": "^2.10.192",
     "next": "13.4.3",
