--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "20.2.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "axios": "^1.4.0",
     "contentlayer": "^0.3.0",
     "framer-motion": "^10.12.12",
     "lucide-react": "^0.263.1",
