--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.2.4",
     "axios": "^1.4.0",
     "contentlayer": "^0.3.0",
+    "encoding": "^0.1.13",
     "framer-motion": "^10.12.12",
     "lucide-react": "^0.263.1",
     "markdown-wasm": "^1.2.0",
